deploy/local-minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djangoapp
  labels:
    name: djangoapp
spec:
  type: ClusterIP
  selector:
    name: djangoapp
  ports:
    - name: djangoapp-web
      port: 80
      targetPort: 80
