deploy/local-minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djangoapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: star-burger.test
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: djangoapp
              port:
                number: 80
